2010-02-02  Joel Stanley  <joel@jms.id.au>

        Reviewed by David Levin.

        [Chromium] Add API method for setting caret blink frequency.
        https://bugs.webkit.org/show_bug.cgi?id=31704

        This enables the RenderThemeChromiumLinux::setCaretBlinkInterval method
        to be called Chromium's API.  The API is linux-only as it is currently
        the only port to implement RenderTheme::setCaretBlinkInterval.

        * WebKit.gyp:  Add WebRenderTheme.{h,cpp}
        * public/linux/WebRenderTheme.h: Added.
        * src/linux/WebRenderTheme.cpp: Added.
        (WebKit::setCaretBlinkInterval): Exposed API

2010-02-02  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Dimitri Glazkov.

        [Chromium] Implement WebFrameImpl::pageNumberForElementById
        https://bugs.webkit.org/show_bug.cgi?id=34471

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::pageNumberForElementById):
        * src/WebFrameImpl.h:

2010-02-02  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Upstream DevTools code.

        https://bugs.webkit.org/show_bug.cgi?id=34326

        * WebKit.gyp:
        * src/APUAgentDelegate.h: Added.
        * src/BoundObject.cpp: Added.
        (WebKit::BoundObject::BoundObject):
        (WebKit::BoundObject::~BoundObject):
        (WebKit::BoundObject::addProtoFunction):
        (WebKit::BoundObject::build):
        * src/BoundObject.h: Added.
        * src/DebuggerAgent.h: Added.
        * src/DebuggerAgentImpl.cpp: Added.
        (WebKit::DebuggerAgentImpl::DebuggerAgentImpl):
        (WebKit::DebuggerAgentImpl::~DebuggerAgentImpl):
        (WebKit::DebuggerAgentImpl::getContextId):
        (WebKit::DebuggerAgentImpl::debuggerOutput):
        (WebKit::DebuggerAgentImpl::createUtilityContext):
        (WebKit::DebuggerAgentImpl::executeUtilityFunction):
        (WebKit::DebuggerAgentImpl::executeVoidJavaScript):